@@ -17,6 +17,11 @@ $URL$
       (this belongs to the smakefile), added removal of the guide files
       to it, and added a "realclean" one which additionally removes the
       autogenerated headers
+    * createcat.c, createcat.h, createcatsrc.c, createcatsrc.h, createct.c,
+      createct.h, flexcat.h, getft.c, globals.c, globals.h, main.c,
+      readprefs.c, readprefs.h, scancd.c, scancd.h, scanct.c, scanct.h,
+      showfuncs.c, showfuncs.h, swapfuncs.c, swapfuncs.h, utils.c, utils.h:
+      updated copyright notice (2006->2007)
 
 2006-12-31  Joerg Strohmayer <nospam@gmx.de>
 
